log
Thu 28 Mar 2024 02:26:04 AM UTC: 
 tests:  0|6
total_score: 0/70
aafec17
Thu 28 Mar 2024 02:36:48 AM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
1c2276f
Thu 28 Mar 2024 02:39:01 AM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:8: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   34 |   nuevo->head = NULL;
      |        ^~
list.c:33:24: note: referencing an object of size 8 allocated by ‘malloc’
   33 |   List* nuevo = (List*)malloc(sizeof(List*));
      |                        ^~~~~~~~~~~~~~~~~~~~~
list.c:35:8: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   35 |   nuevo->tail = NULL;
      |        ^~
list.c:33:24: note: referencing an object of size 8 allocated by ‘malloc’
   33 |   List* nuevo = (List*)malloc(sizeof(List*));
      |                        ^~~~~~~~~~~~~~~~~~~~~
list.c:36:8: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   36 |   nuevo->current = NULL;
      |        ^~
list.c:33:24: note: referencing an object of size 8 allocated by ‘malloc’
   33 |   List* nuevo = (List*)malloc(sizeof(List*));
      |                        ^~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8ae5214
Thu 28 Mar 2024 02:39:38 AM UTC: 
 list.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  1|5
total_score: 10/70
537e8b4
Thu 28 Mar 2024 02:40:09 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:9: error: unused variable ‘nuevo’ [-Werror=unused-variable]
   33 |   List* nuevo = (List*)malloc(sizeof(List*));
      |         ^~~~~
list.c:35:1: error: control reaches end of non-void function [-Werror=return-type]
   35 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f54ae00
